--- a/ormconfig.json
+++ b/ormconfig.json
@@ -4,5 +4,11 @@
   "host": "172.24.0.2",
   "username": "docker",
   "password": "ignite",
-  "database": "rentx"
+  "database": "rentx",
+  "migrations": [
+    "./src/database/migrations/*.ts"
+  ],
+  "cli": {
+    "migrationsDir": "./src/database/migrations"
+  }
 }
