--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,10 +1,13 @@
 {
   "type": "postgres",
   "port": 5432,
-  "host": "172.24.0.2",
+  "host": "172.30.0.3",
   "username": "docker",
   "password": "ignite",
   "database": "rentx",
+  "entities": [
+    "./src/modules/**/entities/*.ts"
+  ],
   "migrations": [
     "./src/database/migrations/*.ts"
   ],
