--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,7 +1,7 @@
 {
   "type": "postgres",
   "port": 5432,
-  "host": "172.30.0.3",
+  "host": "localhost",
   "username": "docker",
   "password": "ignite",
   "database": "rentx",
@@ -9,9 +9,9 @@
     "./src/modules/**/entities/*.ts"
   ],
   "migrations": [
-    "./src/database/migrations/*.ts"
+    "./src/shared/infra/typeorm/migrations/*.ts"
   ],
   "cli": {
-    "migrationsDir": "./src/database/migrations"
+    "migrationsDir": "./src/shared/infra/typeorm/migrations"
   }
 }
