Add s3 storage provider

--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 FORGOT_MAIL_URL=http://localhost:3333/password/reset?token=
+
+# AWS CREDENTIALS
+AWS_ACCESS_KEY_ID=AKIAR3MSLNPZBJJRT766
+AWS_SECRET_ACCESS_KEY=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
+AWS_BUCKET=api-rentx-rocketseat
+AWS_BUCKET_REGION=us-east-1
+
+disk=s3
