--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,26 +6,32 @@ services:
     container_name: database_ignite
     restart: unless-stopped
     ports:
-      - 65432:5432
+      - 5432:5432
     environment:
       - POSTGRES_USER=docker
-      - POSTGRES_PASSWORD=9TKSxmjBWyrH
+      - POSTGRES_PASSWORD=ignite
       - POSTGRES_DB=rentx
     volumes:
       - pgdata:/data/postgres
-  app:
-    build: .
-    container_name: rentx
-    restart: unless-stopped
+
+  redis:
+    image: redis:alpine
     ports:
-      - 3333:3333
-      - 9229:9229
-    volumes:
-      - .:/usr/app
-    links:
-      - database_ignite
-    depends_on: 
-      - database_ignite
+      - 6379:6379
+  
+  # app:
+  #   build: .
+  #   container_name: rentx
+  #   restart: unless-stopped
+  #   ports:
+  #     - 3333:3333
+  #     - 9229:9229
+  #   volumes:
+  #     - .:/usr/app
+  #   links:
+  #     - database_ignite
+  #   depends_on: 
+  #     - database_ignite
 
 volumes:
   pgdata:
