--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,12 @@ disk=local
 
 # Email
 MAIL_PROVIDER=ethereal
+
+
+# Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+
+# Sentry
+SENTRY_DSN=
